fixed header spacing and admin card spacing to appear to the top left of card; added spacing styling to email and admin text to appeae higher

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -141,24 +141,27 @@ h2{
     border-radius: 100px;
     width: 50px;
     height: 50px;
-    margin-top: 20px;
+    margin-top: -40px;
     margin-left: 10px;
 }
 #card-header{
+    display: flex;
+    justify-content: start;
     background-color: white;
+    margin-left: 60px;
     border-bottom: 0px;
-    margin-left: 70px;
-    margin-top: -55px;
 }
 #card-text{
     margin-left: 85px;
 }
 #email-text{
-    margin-top: -5px;
+    margin-top: -20px;
     margin-bottom: 5px;
+    margin-left: -10px;
 }
 #admin-text{
     margin-bottom: 10px;
+    margin-left: -10px;
 }
 #edit-list{
     font-size: 30px;
